aws-resources/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-resources
  labels:
    app: aws-resources
spec:
  selector:
    app: aws-resources
  ports:
    - port: 8080
      targetPort: 8080
