aws-resources/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: aws-resources
  labels:
    app: aws-resources
spec:
  to:
    kind: Service
    name: aws-resources
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
